--- a/.github/workflows/generate-docc.yml
+++ b/.github/workflows/generate-docc.yml
@@ -145,59 +145,22 @@ jobs:
       - name: Generate sitemap
         run: |
           project="${{ inputs.project-name }}"
-          output_dir="Websites/${project}"
-          sitemap_file="${output_dir}/sitemap.xml"
-          
           echo "🗺️  Generating sitemap for ${project}..."
           
-          # Read lastmod date from state file (will be updated by lefthook-plugin when package version changes)
-          if [ -f "Resources/sitemap-state.json" ]; then
-            lastmod=$(jq -r '.generated_date' Resources/sitemap-state.json)
-            echo "📅 Using lastmod from state file: $lastmod"
-          else
-            # Fallback to current date if state file doesn't exist
-            lastmod=$(date -u +"%Y-%m-%d")
-            echo "⚠️  State file not found, using current date: $lastmod"
+          # Use util CLI to generate sitemap
+          swift run util sitemap generate --site "${project}" --verbose
+          
+          # Validate sitemap was generated and is not empty
+          sitemap_file="Websites/${project}/sitemap.xml"
+          if [ ! -f "$sitemap_file" ]; then
+            echo "❌ Error: Sitemap file not created"
+            exit 1
           fi
           
-          # Start sitemap XML
-          cat > "$sitemap_file" << 'EOF'
-          <?xml version="1.0" encoding="UTF-8"?>
-          <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-          
-          EOF
-          
-          # Find all HTML files under documentation/ directory and generate URL entries
-          find "${output_dir}/documentation" -name "*.html" -type f | sort | while read -r file; do
-            # Convert file path to URL path, stripping index.html for canonical URLs
-            # (Cloudflare Pages redirects /path/index.html → /path/)
-            url_path=$(echo "$file" | sed -e "s|^${output_dir}/||" -e 's|/index\.html$|/|')
-            
-            # Build absolute URL (docs.21.dev subdomain)
-            url="https://docs.21.dev/${url_path}"
-            
-            # Escape XML special characters in URL (using basic sed substitution)
-            escaped_url=$(echo "$url" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/'"'"'/\&apos;/g; s/"/\&quot;/g')
-            
-            # Add URL entry to sitemap
-            cat >> "$sitemap_file" << EOF
-          <url>
-            <loc>${escaped_url}</loc>
-            <lastmod>${lastmod}</lastmod>
-          </url>
-          
-          EOF
-          done
-          
-          # Close sitemap XML
-          echo "</urlset>" >> "$sitemap_file"
-          
-          # Count URLs and display summary
           url_count=$(grep -c "<loc>" "$sitemap_file" || echo "0")
-          echo "✅ Sitemap generated with ${url_count} URLs"
           echo "📄 Sitemap location: ${sitemap_file}"
+          echo "📊 Total URLs: ${url_count}"
           
-          # Validate sitemap is not empty
           if [ "$url_count" -eq 0 ]; then
             echo "❌ Error: Sitemap contains no URLs"
             exit 1
