--- a/.github/workflows/build-slipstream.yml
+++ b/.github/workflows/build-slipstream.yml
@@ -87,52 +87,15 @@ jobs:
       - name: Compile Tailwind CSS
         run: |
           website="${{ inputs.website }}"
-          config_file="Resources/${website}/tailwind.config.cjs"
+          echo "Compiling site-wide CSS for ${website}..."
           
-          # Find all CSS input files using the flexible pattern
-          css_files=$(find "Resources/${website}" -name "style.input.css" -path "*/static/style.input.css" 2>/dev/null || true)
+          swift package --disable-sandbox tailwindcss \
+            --input "Resources/${website}/static/style.input.css" \
+            --output "Websites/${website}/static/style.css" \
+            --config "Resources/${website}/tailwind.config.cjs" \
+            --minify
           
-          if [ -z "$css_files" ]; then
-            echo "Error: No CSS input files found in Resources/${website}"
-            echo "Expected pattern: Resources/${website}/*/static/style.input.css"
-            exit 1
-          fi
-          
-          echo "Found CSS input files:"
-          echo "$css_files"
-          
-          # Compile each CSS file
-          while IFS= read -r input_file; do
-            # Extract the page path from the input file
-            # e.g., Resources/21-dev/static/style.input.css -> static
-            # e.g., Resources/21-dev/p256k/static/style.input.css -> p256k/static
-            relative_path=$(echo "$input_file" | sed "s|Resources/${website}/||" | sed 's|/style\.input\.css$||')
-            
-            if [ "$relative_path" = "static" ]; then
-              # Root CSS file
-              output_file="Websites/${website}/static/style.css"
-              echo "Compiling root CSS: $input_file -> $output_file"
-            else
-              # Page-specific CSS file
-              output_file="Websites/${website}/${relative_path}/style.css"
-              echo "Compiling page CSS: $input_file -> $output_file"
-              
-              # Ensure output directory exists
-              mkdir -p "$(dirname "$output_file")"
-            fi
-            
-            # Compile the CSS file with minification
-            if ! swift package --disable-sandbox tailwindcss \
-              --input "$input_file" \
-              --output "$output_file" \
-              --config "$config_file" \
-              --minify; then
-              echo "Error: Failed to compile $input_file"
-              exit 1
-            fi
-            
-            echo "Successfully compiled: $output_file"
-          done <<< "$css_files"
+          echo "✅ Successfully compiled CSS"
       
       - name: Verify build output
         run: |
